1. Метод .of [#433241]